# Match3-solana

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
programs/match_3/: Cargo.toml
programs/match_3/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/match_3/src/instructions/: add_new_tree.rs  create_scratchcard.rs  init_match3.rs  init_player_config.rs  mint_scratchcard.rs  mod.rs  scratching_card.rs
programs/match_3/src/state/: match3_info.rs  mod.rs  scratchcard.rs
tests/: match3.ts
